# CH3-96

./: .gitattributes  .gitignore
doc/: План.txt
doc/Разработка/: План.txt
sources/: CH3-96-2.uvmpw  CH3-96-2.uvmpw.uvgui.Sasha  CMakeLists.txt
sources/Loader/: CMakeLists.txt  Loader.sct  Loader.uvguix.Sasha  Loader.uvoptx  Loader.uvprojx
sources/Loader/Objects/: DLoader57.build_log.htm  Loader_Release.dep  main.d
sources/Loader/src/: defines.h  log.cpp  log.h  main.cpp
sources/Loader/src/Display/: AdvancedFont_d.cpp  Colors.cpp  Colors.h  Display.cpp  Display.h  Painter.h  Painter_stm.cpp  Primitives.cpp  Primitives.h  Primitives_stm.cpp
sources/Loader/src/FlashDrive/: FlashDrive.cpp
sources/Loader/src/Hardware/: CPU.cpp  CPU.h  CPU_FLASH.cpp  CPU_It.cpp  CPU_Panel.cpp  Controls.h  FDrive.cpp  FDrive.h  Timer.cpp  Timer.h
sources/Loader/src/Hardware/HAL/: FLASH.cpp  FLASH.h  HAL.cpp  HAL.h  HAL_EEPROM.cpp  HAL_FSMC_PAN_stm.cpp  HAL_FSMC_stm.cpp  HAL_IT.cpp  HAL_PIO.cpp  HAL_PIO.h  stm32f4xx_hal_conf.h
sources/Loader/src/Hardware/USBH/: usbh_conf.cpp  usbh_conf.h  usbh_diskio.cpp  usbh_diskio.h
sources/Loader/src/Hardware/stm32/: Timer4XX.cpp  stm437.cpp  stm437.h
sources/Loader/src/Keyboard/: BufferButtons.cpp  BufferButtons.h  Keyboard.cpp  Keyboard.h
sources/Loader/src/Utils/: Buffer.cpp  Buffer.h  Math.cpp  Math.h  String.cpp  String.h
sources/Panel/: CMakeLists.txt  Panel.uvguix.Sasha  Panel.uvoptx  Panel.uvprojx
sources/Panel/src/: Settings.cpp  Settings.h  defines.h  main.cpp
sources/Panel/src/Calculate/: ValueFPGA.cpp  ValueFrequency.cpp
sources/Panel/src/Display/: Colors.cpp  Colors.h  Console.cpp  Console.h  Display.cpp  Display.h  Display_stm.cpp  Indicator.cpp  Objects.cpp  Objects.h  Primitives.cpp  Primitives.h  RedrawingZone.cpp  Text.cpp  Text.h
sources/Panel/src/Hardware/: FPGA.cpp  FPGA.h  FreqMeter.cpp  VCP.cpp  VCP.h
sources/Panel/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_EEPROM.cpp  HAL_FSMC.cpp  HAL_IT.cpp  HAL_TIM.cpp  HAL_USBD.cpp
sources/Panel/src/Hardware/USBD/: usbd_cdc_interface.cpp  usbd_conf.cpp  usbd_core.cpp
sources/Panel/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Panel/src/Menu/: Hint.cpp  Hint.h  Menu.cpp  Menu.h  MenuItems.cpp  MenuItems.h  MenuItemsDef.h
sources/Panel/src/Menu/Pages/: PageIndication.cpp  PageInfo.cpp  PageInfo.h  PageService.cpp  PageService.h  PageStatistics.cpp  PageStatistics.h  Pages.h
sources/Panel/src/Menu/Pages/Channels/: ChannelA.cpp  ChannelB.cpp  ChannelC.cpp  ChannelD.cpp  Channels.cpp  Channels.h
sources/Panel/src/Menu/Pages/Modes/: Modes.cpp  Modes.h  PageModesA.cpp  PageModesB.cpp  PageModesC.cpp  PageModesD.cpp  PagesModes.cpp
sources/Panel/src/Menu/Pages/Other/: PageColors.cpp  PageColors.h  PageInfo.cpp  PageInfo.h  PageStatistics.cpp  PageStatistics.h  PageTuneColor.cpp  PageTuneColor.h  PageTuneColors.cpp
sources/Panel/src/SCPI/: BufferSCPI.cpp  BufferSCPI.h  SCPI.cpp  SCPI.h  StringUtils.cpp  UtilsSCPI.cpp
sources/Panel/src/SCPI/Process/: HeadSCPI.cpp  InputSCPI.cpp  MeasureSCPI.cpp  SetSCPI.cpp  UpgradeSCPI.cpp
sources/Panel/src/Utils/: Debug.cpp  Debug.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  Values.cpp
sources/Panel/tests/: TestValuesFPGA.cpp
sources/VS/: CMakeLists.txt
sources/VS/Panel/: CMakeLists.txt
sources/VS/Panel/src/: main_win.cpp
sources/VS/Panel/src/Display/: Colors_win.cpp  Display_win.cpp
sources/VS/Panel/src/GUI/: Application.cpp  Application.h  ComPort.cpp  ConsoleSCPI.cpp  rs232.c
sources/VS/Panel/src/Hardware/HAL/: HAL_EEPROM_win.cpp
sources/VS/Panel/src/Keyboard/: Keyboard_win.cpp
sources/VS/Saver/: CMakeLists.txt
sources/VS/Saver/src/: Application_win.cpp  Application_win.h  main_win.cpp
sources/VS/Saver/src/Display/: Display_win.cpp
sources/VS/Saver/src/GUI/: ComPort.cpp  ComPort.h  GovernorGUI.cpp  rs232.c
sources/VS/Saver/src/Keyboard/: Keyboard_win.cpp
sources/VS/Upgrader/: CMakeLists.txt  ComPort.cpp  main.cpp
sources/VS/checksum/: CMakeLists.txt  main.cpp
sources/common/_VS_KEIL/FatFS/: ff_gen_drv.h
sources/scripts/: assembly.bat
sources/scripts/keil/: assembly.bat
sources/scripts/vs_gui/: assembly.bat
sources/scripts/vs_keil/: assembly.bat
